--- a/css/formjs.css
+++ b/css/formjs.css
@@ -1028,7 +1028,7 @@ input[type="submit"].formjs, button.formjs, a.formjs {
     outline: 0;
     line-height: 1.42857143;
     border-radius: 3px;
-    margin: 2px;
+    margin: 2px 0;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
