--- a/css/formjs.css
+++ b/css/formjs.css
@@ -67,6 +67,7 @@ textarea.formjs-lg:focus, textarea.formjs-sm.focus,
 textarea.formjs.focus, textarea.formjs-lg.focus {
 	border-color: #3aabf0;
 	outline: 0;
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 }
@@ -77,6 +78,7 @@ textarea.formjs-sm:hover,
 textarea.formjs:hover,
 textarea.formjs-lg:hover {
 	border-color: #99d3f7;
+	-moz-box-shadow: 0 0 4px rgba(153,211,247,0.4);
 	-webkit-box-shadow: 0 0 4px rgba(153,211,247,0.4);
 	box-shadow: 0 0 4px rgba(153,211,247,0.4);
 	outline: 0;
@@ -109,6 +111,7 @@ input.formjs-error.focus:not([type=submit]):not([type=button]):not([type=radio])
 input.formjs-error.focus:not([type=submit]):not([type=button]):not([type=radio]):not([type=checkbox]):not([type=file]),
 textarea.formjs-error:focus, textarea.formjs-error:focus,
 textarea.formjs-error.focus, textarea.formjs-error.focus {
+	-moz-box-shadow: 0 0 0 1px #d31a48 inset,0 1px 1px rgba(0,0,0,0.075) inset,0 0 4px 0 rgba(210,40,82,0.6);
 	-webkit-box-shadow: 0 0 0 1px #d31a48 inset,0 1px 1px rgba(0,0,0,0.075) inset,0 0 4px 0 rgba(210,40,82,0.6);
 	box-shadow: 0 0 0 1px #d31a48 inset,0 1px 1px rgba(0,0,0,0.075) inset,0 0 4px 0 rgba(210,40,82,0.6);
     border: 1px solid #d31a48;
@@ -119,7 +122,8 @@ input.formjs-error.hover:not([type=submit]):not([type=button]):not([type=radio])
 input.formjs-error.hover:not([type=submit]):not([type=button]):not([type=radio]):not([type=checkbox]):not([type=file]),
 textarea.formjs-error:hover, textarea.formjs-error:hover,
 textarea.formjs-error.hover, textarea.formjs-error.hover {
-	-webkit-box-shadow: 0 0 4px rgba(236, 108, 140, 0.44);
+    -moz-box-shadow: 0 0 4px rgba(236, 108, 140, 0.44);
+    -webkit-box-shadow: 0 0 4px rgba(236, 108, 140, 0.44);
     box-shadow: 0 0 4px rgba(236, 108, 140, 0.44);
     border: 1px solid #d31a48;
 }
@@ -129,6 +133,7 @@ input.disableonfocus.hover:not([type=submit]):not([type=button]):not([type=radio
 input.disableonfocus.hover:not([type=submit]):not([type=button]):not([type=radio]):not([type=checkbox]):not([type=file]),
 textarea.disableonfocus:hover, textarea.disableonfocus:hover,
 textarea.disableonfocus.hover, textarea.disableonfocus.hover {
+	-moz-box-shadow: 0 0 0 1px #d31a48 inset,0 1px 1px rgba(0,0,0,0.075) inset,0 0 4px 0 rgba(210,40,82,0.6);
 	-webkit-box-shadow: 0 0 0 1px #d31a48 inset,0 1px 1px rgba(0,0,0,0.075) inset,0 0 4px 0 rgba(210,40,82,0.6);
 	box-shadow: 0 0 0 1px #d31a48 inset,0 1px 1px rgba(0,0,0,0.075) inset,0 0 4px 0 rgba(210,40,82,0.6);
     border: 1px solid #d31a48;
@@ -141,6 +146,7 @@ textarea.formjs-sm[disabled], textarea.formjs[disabled],
 textarea.formjs-lg[disabled], textarea.disabled {
 	cursor: not-allowed;
 	background-color: #f9f9f9;
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 }
@@ -160,6 +166,7 @@ input[type=file].formjs:focus,
 input[type=file].formjs-lg:focus {
 	border-color: #3aabf0;
 	outline: 0;
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 }
@@ -167,6 +174,7 @@ input[type=file].formjs-sm:hover,
 input[type=file].formjs:hover,
 input[type=file].formjs-lg:hover {
 	border-color: #99d3f7;
+	-moz-box-shadow: 0 0 4px rgba(153,211,247,0.4);
 	-webkit-box-shadow: 0 0 4px rgba(153,211,247,0.4);
 	box-shadow: 0 0 4px rgba(153,211,247,0.4);
 	outline: 0;
@@ -218,6 +226,7 @@ a.formjs-link-sm {
 	line-height: 1.42857143;
 	font-weight: normal;
 	border-radius: 0;
+	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	transition: background-color 150ms linear, color 150ms linear, border 150ms linear;
@@ -232,6 +241,7 @@ a.formjs-link {
 	line-height: 1.42857143;
 	font-weight: normal;
 	border-radius: 0;
+	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	transition: background-color 150ms linear, color 150ms linear, border 150ms linear;
@@ -246,6 +256,7 @@ a.formjs-link-lg {
 	line-height: 1.42857143;
 	font-weight: normal;
 	border-radius: 0;
+	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	transition: background-color 150ms linear, color 150ms linear, border 150ms linear;
@@ -352,7 +363,7 @@ a.formjs-link-lg.disabled {
 }
 .checkbox-status .fc-status-sm:after {
 	left: 3px;
-	top: 0px;
+	top: 0;
 	width: 3px;
 	height: 7px;
 	border: solid #fff;
@@ -408,7 +419,7 @@ a.formjs-link-lg.disabled {
 .fc-status-sm {
 	position: absolute;
 	top: 2px;
-	left: 0px;
+	left: 0;
 	height: 11px;
 	width: 11px;
 	background: #e6e6e6;
@@ -495,8 +506,8 @@ a.formjs-link-lg.disabled {
 	content: '';
 	display: block;
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 0;
+	top: 0;
 	width: 36px;
 	height: 36px;
 	margin-left: -11px;
@@ -517,8 +528,8 @@ a.formjs-link-lg.disabled {
 	content: '';
 	display: block;
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 0;
+	top: 0;
 	width: 30px;
 	height: 30px;
 	margin-left: -10px;
@@ -706,14 +717,14 @@ a.formjs-link-lg.disabled {
 	-o-transition: background 0.7s;
 	transition: background 0.7s;
 	border: 1px solid #656565;
-	-webkit-border-radius: 50%;50%;
-	-moz-border-radius: 50%;50%;
-	border-radius: 50%;50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
 }
 .fr-status-sm {
 	position: absolute;
 	top: 2px;
-	left: 0px;
+	left: 0;
 	height: 12px;
 	width: 12px;
 	background: #e6e6e6;
@@ -927,6 +938,7 @@ a.formjs-link-lg.disabled {
 select[multiple].formjs:focus {
 	border-color: #3aabf0;
     outline: 0;
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 }
@@ -937,6 +949,7 @@ select[multiple].formjs:hover {
 	background: #f1f1f1;
 	border-color: #99d3f7;
     outline: none;
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
