--- a/css/formjs.css
+++ b/css/formjs.css
@@ -952,8 +952,9 @@ select[multiple].formjs:hover {
     -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
     -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    -moz-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 .formjs-select-sm select:not([multiple]):disabled,
@@ -964,6 +965,7 @@ select[multiple].formjs:disabled {
 	opacity: 0.5;
 	background: #fbfbfb;
 	color: #444;
+    -moz-box-shadow: 0 0 4px rgba(255, 255, 255, 0);
     -webkit-box-shadow: 0 0 4px rgba(255, 255, 255, 0);
     box-shadow: 0 0 4px rgba(255, 255, 255, 0);
     outline: none;
@@ -1055,21 +1057,22 @@ input[type="submit"].formjs:active:focus, button.formjs:active:focus, a.formjs:a
 input[type="submit"].formjs:active.focus, button.formjs:active.focus, a.formjs:active.focus,
 input[type="submit"].formjs.active:focus, button.formjs.active:focus, a.formjs.active:focus,
 input[type="submit"].formjs.active.focus, button.formjs.active.focus, a.formjs.active.focus {
-    outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
-    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
-    box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
     border-color: #3aabf0;
     outline: 0;
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(58,171,240,0.6);
 }
 input[type="submit"].formjs.disabled, button.formjs.disabled, a.formjs.disabled,
 input[type="submit"].formjs[disabled], button.formjs[disabled], a.formjs[disabled] {
     cursor: not-allowed;
-    opacity: 0.65;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
     filter: alpha(opacity=65);
+    -moz-opacity: 0.65;
+    -khtml-opacity: 0.65;
+    opacity: 0.65;
+    -moz-box-shadow: none;
     -webkit-box-shadow: none;
     box-shadow: none
 }
