--- a/css/assets/grid.css
+++ b/css/assets/grid.css
@@ -1,45 +1,5 @@
 @charset "UTF-8";
-/*------------------*\
 
-  $TOAST-GRID
-
-  An insane grid.
-  You'd be mad to use it.
-
-  Usage
-  =====
-
-  Assuming default values:
-
-  <div class="row">
-    <div class="col col-1-of-2">
-      A half-width column.
-    </div>
-    <div class="col col-1-of-4 col-pull-1-of-4">
-      A quarter, pulled left by its own width. You get this, right?
-    </div>
-  </div>
-
-
-  Customisation
-  =============
-
-  $toast-grid-namespace and $toast-grid-column-namespace
-  adjusts the class names for the grid. With
-  default values, grid wrappers have a class
-  of '.row' and columns '.col'.
-
-  $toast-col-groups(n) adjusts column divisions.
-  For example, $toast-col-groups(12) will produce
-  a 12-column grid. $col-groups(3,6,8)
-  will produce a 3-, 6-, and 8-column grid.
-
-  $toast-gutter-width is—you guessed it—the gutter
-  width. Accepts any unit.
-
-  That's it. Have fun.
-
-\*------------------*/
 .row {
   list-style: none;
   margin-left: -20px; }
@@ -256,7 +216,7 @@
       margin-right: 0;
       width: auto; } }
   @media (max-width: 700px) and (min-width: 480px) {
-    .col[class*="grid__col-m-"] {
+    .col[class*="col-m-"] {
       display: inline-block;
       margin-right: -.24em; }
     .col.col-m-1-of-2, .col.col-m-2-of-4 {
@@ -270,7 +230,7 @@
     .col.col-m-3-of-4 {
       width: 75%; } }
   @media (max-width: 480px) {
-    .col[class*="grid__col-s-"] {
+    .col[class*="col-s-"] {
       display: inline-block;
       margin-right: -.24em; }
     .col.col-s-1-of-2, .col.col-s-2-of-4 {
